More stuff, figuring out the obscure names.